authenticationwebapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: authenticationwebapi
  name: authenticationwebapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authenticationwebapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: authenticationwebapi
    spec:
      containers:
        - name: authentication
        - image: partytimecontainerregistry.azurecr.io/authentication:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources: {}
          name: authentication
      imagePullSecrets:
        - name: partytimesecret
      hostname: authentication
      restartPolicy: Always
status: {}
