frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: partytimecontainerregistry.azurecr.io/frontend:latest
          name: frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources: {}
      hostname: frontend
      imagePullSecrets:
        - name: partytimesecret
      restartPolicy: Always
status: {}
