joined-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: joined
  name: joined
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: joined
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: joined
    spec:
      containers:
        - image: partytimecontainerregistry.azurecr.io/joined:latest
          name: joined
          imagePullPolicy: Always
          ports:
            - containerPort: 5004
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
      imagePullSecrets:
        - name: partytimesecret
      hostname: joined
      restartPolicy: Always
status: {}
