joinedpostgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: joinedpostgresql
  name: joinedpostgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: joinedpostgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: joinedpostgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: joined
            - name: POSTGRES_PASSWORD
              value: FHk562I6jRC78U9q
            - name: POSTGRES_USER
              value: tommie
          image: postgres:15.3-alpine
          name: joinedpostgresql
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: joinedpostgresql
            - mountPath: /docker-entrypoint-initdb.d/docker_postgres_joined.sql
              name: joinedpostgresql-claim1
      restartPolicy: Always
      volumes:
        - name: joinedpostgresql
          persistentVolumeClaim:
            claimName: joinedpostgresql
        - name: joinedpostgresql-claim1
          persistentVolumeClaim:
            claimName: joinedpostgresql-claim1
status: {}
