party-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: party
  name: party
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: party
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: party
    spec:
      containers:
        - name: party
        - image: partytimecontainerregistry.azurecr.io/party:latest
          imagePullPolicy: Always
          name: party
          ports:
            - containerPort: 5000
          resources: {}
      imagePullSecrets:
        - name: partytimesecret
      hostname: party
      restartPolicy: Always
status: {}
