partypostgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: partypostgresql
  name: partypostgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: partypostgresql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: partypostgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: party
            - name: POSTGRES_PASSWORD
              value: Rfec7Fo81YchjyUu
            - name: POSTGRES_USER
              value: tommie
          image: postgres:15.3-alpine
          name: partypostgresql
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: partypostgresql
            - mountPath: /docker-entrypoint-initdb.d/docker_postgres_init.sql
              name: partypostgresql-claim1
      restartPolicy: Always
      volumes:
        - name: partypostgresql
          persistentVolumeClaim:
            claimName: partypostgresql
        - name: partypostgresql-claim1
          persistentVolumeClaim:
            claimName: partypostgresql-claim1
status: {}
