pgadmin-compose-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin-compose
  name: pgadmin-compose
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin-compose
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: pgadmin-compose
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: test@gmail.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: test123!
          image: dpage/pgadmin4
          name: pgadmin-compose
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
