rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/partytimeinfra-partytime: "true"
        io.kompose.service: rabbitmq
    spec:
      containers:
        - image: rabbitmq:management
          name: rabbitmq
          ports:
            - containerPort: 5672
            - containerPort: 15672
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmqdata
      hostname: rabbitmq
      restartPolicy: Always
      volumes:
        - name: rabbitmqdata
          persistentVolumeClaim:
            claimName: rabbitmqdata
status: {}
