apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: apigateway
  name: apigateway
spec:
  type: ClusterIP
  ports:
    - name: "8001"
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    io.kompose.service: apigateway
status:
  loadBalancer: {}
