joined-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: joined
  name: joined
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
  selector:
    io.kompose.service: joined
status:
  loadBalancer: {}
