service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: default
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: MC_partytime-rg_partytimecluster_eastus
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
