example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: partytime-apigateway.info
      http:
        paths:
          - path: /apigateway
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 8001
    - host: partytime-frontend.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
