frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: frontend-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      # - path: /apigateway/(.*)
      #   backend:
      #     service:
      #       name: apigateway
      #       port:
      #         number: 8001
