ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: apigateway.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway
                port:
                  number: 8001
    - host: party.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: party
                port:
                  number: 5000
